--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "validator": "^13.1.1"
   }
 }
