--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "shortid": "^2.2.15",
     "slugify": "^1.4.5",
     "validator": "^13.1.1"
   }
