--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "client-install": "npm install --prefix admin",
+    "client": "npm start --prefix admin",
+    "server": "nodemon ./bin/www",
+    "dev": "concurrently 'npm run server' 'npm run client'"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -20,5 +25,9 @@
     "shortid": "^2.2.15",
     "slugify": "^1.4.5",
     "validator": "^13.1.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
   }
 }
